--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- header -->
   <header class="header">
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg ">
       <div class="container">
         <a class="navbar-brand" href="#"><span class="text-warning">App</span>Lab</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -25,7 +25,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 me-5 pe-5 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 me-5 pe-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="#">Home</a>
             </li>
@@ -43,7 +43,7 @@
             </li>
           </ul>
 
-          <div class="d-flex">
+          <div class="d-flex mb-2 mb-lg-0">
             <a href="#" class="btn explore-btn">Try for free</a>
           </div>
         </div>
@@ -51,6 +51,51 @@
     </nav>
   </header><!-- end header -->
 
+  <!-- hero section -->
+  <section class="hero-section hero-bg">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 d-flex  align-items-center">
+          <div class="hero-content">
+            <a href="#" class="hero-badge">#1 Editors Choice App of 2020</a>
+            <h1 class="hero-title">Best app for your
+              modern lifestyle</h1>
+            <p>Increase productivity with a simple to-do app. app for
+              managing your personal budgets.</p>
+            <div class="hero-btn-grp mt-4">
+              <a href="#" class="btn explore-btn">Try for free</a>
+              <a href="#" class="btn">Watch Demo Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <div class="hero-img text-center">
+            <img src="./img/hero-phone.jpg" alt="Hero Image">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!-- end hero section -->
+
+  <!-- companies section -->
+  <section class="companies-section py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-md-10 offset-lg-1 offset-md-1">
+          <div class="companies-content">
+            <p class="text-center">Trusted by companies like</p>
+            <div class="companies-logo d-flex justify-content-between align-items-center">
+              <a href="#"><img src="./img/company-1.png" alt="Southwest"></a>
+              <a href="#"><img src="./img/company-2.png" alt="ANUBIS"></a>
+              <a href="#"><img src="./img/company-3.png" alt="ALONZO"></a>
+              <a href="#"><img src="./img/company-2.png" alt="ANUBIS"></a>
+              <a href="#"><img src="./img/company-1.png" alt="Southwest"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- bootstrap js -->
   <script src="js/bootstrap.bundle.min.js"></script>
