--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-md-10 offset-lg-1 offset-md-1">
-          <div class="companies-content">
-            <p class="text-center">Trusted by companies like</p>
+          <div class="companies-content py-5">
+            <p class="text-center mb-3">Trusted by companies like</p>
             <div class="companies-logo d-flex justify-content-between align-items-center">
               <a href="#"><img src="./img/company-1.png" alt="Southwest"></a>
               <a href="#"><img src="./img/company-2.png" alt="ANUBIS"></a>
@@ -96,6 +96,66 @@
       </div>
     </div>
   </section>
+  <!--end companies section-->
+
+  <!-- feature section -->
+  <section class="feature-section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-md-6">
+          <div class="feature-img">
+            <img src="./img/feature-1.png" alt="Feature">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <!-- section title -->
+          <div class="section-title mb-5 pb-3">
+            <h3>Awesome apps <br>
+              features</h3>
+            <p>Increase productivity with a simple to-do app. app for
+              managing your personal budgets.</p>
+          </div>
+          <!-- single feature -->
+          <div class="single-feature mb-5 d-flex align-items-center">
+            <div class="logo me-3">
+              <img src="./img/logo/speed.png" alt="SPEED">
+            </div>
+            <div class="single-feature-content">
+              <h4>Fast Performance</h4>
+              <p>Get your blood tests delivered at
+                home collect a sample from the
+                news your blood tests.</p>
+            </div>
+          </div>
+          <!-- single feature -->
+          <div class="single-feature mb-5 d-flex align-items-center">
+            <div class="logo me-3">
+              <img src="./img/logo/speed.png" alt="SPEED">
+            </div>
+            <div class="single-feature-content">
+              <h4>Fast Performance</h4>
+              <p>Get your blood tests delivered at
+                home collect a sample from the
+                news your blood tests.</p>
+            </div>
+          </div>
+          <!-- single feature -->
+          <div class="single-feature mb-5  d-flex align-items-center">
+            <div class="logo me-3">
+              <img src="./img/logo/speed.png" alt="SPEED">
+            </div>
+            <div class="single-feature-content">
+              <h4>Fast Performance</h4>
+              <p>Get your blood tests delivered at
+                home collect a sample from the
+                news your blood tests.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- bootstrap js -->
   <script src="js/bootstrap.bundle.min.js"></script>
