--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <!-- header -->
-  <header class="header">
+  <header class="header py-3">
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
         <a class="navbar-brand" href="#"><span class="text-warning">App</span>Lab</a>
@@ -99,7 +99,7 @@
   <!--end companies section-->
 
   <!-- feature section -->
-  <section class="feature-section">
+  <section class="feature-section pb-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-6">
@@ -155,6 +155,52 @@
       </div>
     </div>
   </section>
+  <!--end feature section-->
+
+  <!-- smart secttion -->
+  <section class="smart-section py-5">
+    <div class="container">
+      <!-- smart context -->
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-md-6">
+          <h2 class="smart-heading border-end border-2">Smart jackpots that <br> you may love this anytime & anywhere
+          </h2>
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <p class="ps-5">The rise of mobile devices transforms the way we
+            consume information entirely and the world's most
+            elevant channels such as Facebook.</p>
+        </div>
+      </div>
+      <!-- smart item -->
+      <div class="row mt-5 py-5">
+        <div class="col-lg-4 col-md-4">
+          <div class="smart-item">
+            <img src="./img/logo/bill.png" alt="Payouts Bill" class="smart-logo">
+            <h4>Automatic Payouts</h4>
+            <p>Get your blod tests delivered at home collect a sample from the news your blood tests</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="smart-item">
+            <img src="./img/logo/bill.png" alt="Payouts Bill" class="smart-logo">
+            <h4>Network Effect</h4>
+            <p>Get your blod tests delivered at home collect a sample from the news your blood tests</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="smart-item">
+            <img src="./img/logo/bill.png" alt="Payouts Bill" class="smart-logo">
+            <h4>Bigger Rewards Method</h4>
+            <p>Get your blod tests delivered at home collect a sample from the news your blood tests</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--end smart section-->
+
+
 
 
   <!-- bootstrap js -->
