--- a/index.html
+++ b/index.html
@@ -200,7 +200,29 @@
   </section>
   <!--end smart section-->
 
-
+  <!-- designed section -->
+  <section class="designed-section pt-4 border-bottom border-2">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-md-6">
+          <div class="designed-bg">
+            <img src="./img/designed-bg.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 ps-5">
+          <div class="designed-content">
+            <h3>Designed & built by
+              the latest code
+              integration</h3>
+            <p>The rise of mobile devices transforms the way we
+              consume information entirely and the world's most
+              elevant channels such as Facebook.</p>
+            <a href="#" class="btn explore-btn mt-4">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> <!-- end designed section -->
 
 
   <!-- bootstrap js -->
