--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <!--end smart section-->
 
   <!-- designed section -->
-  <section class="designed-section pt-4 border-bottom border-2">
+  <section class="designed-section pt-4 border-bottom">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-6">
@@ -224,7 +224,77 @@
     </div>
   </section> <!-- end designed section -->
 
-
+  <!-- app section -->
+  <section class="app-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3">
+          <div class="section-title text-center">
+            <h3 class="pb-2">Why you should choose
+              our app</h3>
+            <p>The rise of mobile devices transforms the way we consume information entirely
+              and the world's most elevant channels such as Facebook.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row g-5 mt-3">
+        <div class="col-lg-4 col-md-4">
+          <div class="single-app-content px-3  text-center">
+            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+            <h4 class="mb-2">App Develoopment</h4>
+            <p>Get your blood tests delivered at
+              home collect a sample from the
+              news your blood tests.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="single-app-content px-3  text-center">
+            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+            <h4 class="mb-2">App Develoopment</h4>
+            <p>Get your blood tests delivered at
+              home collect a sample from the
+              news your blood tests.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="single-app-content px-3  text-center">
+            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+            <h4 class="mb-2">App Develoopment</h4>
+            <p>Get your blood tests delivered at
+              home collect a sample from the
+              news your blood tests.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="single-app-content px-3  text-center">
+            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+            <h4 class="mb-2">App Develoopment</h4>
+            <p>Get your blood tests delivered at
+              home collect a sample from the
+              news your blood tests.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="single-app-content px-3  text-center">
+            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+            <h4 class="mb-2">App Develoopment</h4>
+            <p>Get your blood tests delivered at
+              home collect a sample from the
+              news your blood tests.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="single-app-content px-3  text-center">
+            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+            <h4 class="mb-2">App Develoopment</h4>
+            <p>Get your blood tests delivered at
+              home collect a sample from the
+              news your blood tests.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- bootstrap js -->
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
