--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3">
-          <div class="section-title text-center">
+          <!-- section title -->
+          <div class="section-title mb-5 text-center">
             <h3 class="pb-2">Why you should choose
               our app</h3>
             <p>The rise of mobile devices transforms the way we consume information entirely
@@ -237,64 +238,216 @@
           </div>
         </div>
       </div>
-      <div class="row g-5 mt-3">
-        <div class="col-lg-4 col-md-4">
-          <div class="single-app-content px-3  text-center">
-            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
-            <h4 class="mb-2">App Develoopment</h4>
-            <p>Get your blood tests delivered at
-              home collect a sample from the
-              news your blood tests.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4">
-          <div class="single-app-content px-3  text-center">
-            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
-            <h4 class="mb-2">App Develoopment</h4>
-            <p>Get your blood tests delivered at
-              home collect a sample from the
-              news your blood tests.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4">
-          <div class="single-app-content px-3  text-center">
-            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
-            <h4 class="mb-2">App Develoopment</h4>
-            <p>Get your blood tests delivered at
-              home collect a sample from the
-              news your blood tests.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4">
-          <div class="single-app-content px-3  text-center">
-            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
-            <h4 class="mb-2">App Develoopment</h4>
-            <p>Get your blood tests delivered at
-              home collect a sample from the
-              news your blood tests.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4">
-          <div class="single-app-content px-3  text-center">
-            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
-            <h4 class="mb-2">App Develoopment</h4>
-            <p>Get your blood tests delivered at
-              home collect a sample from the
-              news your blood tests.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4">
-          <div class="single-app-content px-3  text-center">
-            <img class="mb-3" src="./img/logo/speed.png" alt="logo">
-            <h4 class="mb-2">App Develoopment</h4>
-            <p>Get your blood tests delivered at
-              home collect a sample from the
-              news your blood tests.</p>
+      <div class="row mt-4">
+        <div class="col-lg-10 col-md-10 offset-lg-1 offset-md-1">
+          <div class="row g-5">
+            <div class="col-lg-4 col-md-4">
+              <div class="single-app-content px-3  text-center">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <div class="single-app-content px-3  text-center">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <div class="single-app-content px-3  text-center">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <div class="single-app-content px-3  text-center">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <div class="single-app-content px-3  text-center">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <div class="single-app-content px-3  text-center">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">Customer Support</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!--end app section-->
+
+  <!-- ultimate feature section -->
+  <section class="ultimate-feature my-5 pt-5">
+    <div class="ultimate-bg">
+      <div class="ultimate-bg-staff"></div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-4">
+          <!-- section title -->
+          <div class="section-title my-5">
+            <h3 class="pb-2">Ultimate features
+              that we built</h3>
+            <p>The rise of mobile devices transforms the way we consume information entirely
+              and the world's most elevant channels such as Facebook.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-7 col-md-7">
+          <div class="row g-lg-5 g-3">
+            <div class="col-lg-6 col-md-6">
+              <div class="single-app-content">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="single-app-content">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="single-app-content">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+              <div class="single-app-content">
+                <img class="mb-3" src="./img/logo/speed.png" alt="logo">
+                <h4 class="mb-2">App Develoopment</h4>
+                <p>Get your blood tests delivered at
+                  home collect a sample from the
+                  news your blood tests.</p>
+              </div>
+            </div>
+            <div class="row gx-lg-5 gx-3 gy-3">
+              <div class="col-6">
+                <a href="#" class="btn explore-btn py-3 px-5 fw-bold">See all</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-5 col-md-5">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--end ultimate feature-->
+
+  <!-- pricing section -->
+  <section class="pricing-section ">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3">
+          <!-- section title -->
+          <div class="section-title mb-5 text-center">
+            <h3 class="pb-2">Get awesome features, without
+              extra charges</h3>
+            <p>The rise of mobile devices transforms the way we consume information entirely
+              and the world's most elevant channels such as Facebook.</p>
+          </div>
+        </div>
+      </div>
+      <!-- pricing-content -->
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-10 col-12 offset-lg-3 offset-md-3 offset-sm-1">
+          <div class="row gx-3">
+            <div class="col-6">
+              <div class="single-pricing text-center shadow">
+                <div class="pricing-header pt-5 pb-4">
+                  <p class="price"><span>$0</span>/ month</p>
+                  <h5>Business Class</h5>
+                  <p>For small teams or office</p>
+                </div>
+                <div class="pricing-body py-4">
+                  <p>Drag & Drop Builder</p>
+                  <p>1,000's of Templates</p>
+                  <p>Blog Support Tools</p>
+                  <p>eCommerce Store</p>
+                  <a href="#" class="btn explore-btn px-5 py-2 mt-2">Start free trail</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="single-pricing text-center shadow">
+                <div class="pricing-header pt-5 pb-4">
+                  <p class="price"><span>$99</span>/ month</p>
+                  <h5>Pro Master</h5>
+                  <p>For Best opportunities</p>
+                </div>
+                <div class="pricing-body pt-4 pb-2">
+                  <p>Drag & Drop Builder</p>
+                  <p>1,000's of Templates</p>
+                  <p>Blog Support Tools</p>
+                  <p>eCommerce Store</p>
+                  <a href="#" class="btn explore-btn px-5 py-2 mt-2">Subscribe Now</a>
+                  <a href="#" class="btn text-primary mt-2 underline">Or Start 14 days trail</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--end pricing section-->
+  <hr>
+
+  <!-- review section -->
+  <section class="review-section">
+    <div class="review-bg"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 offset-lg-6 offset-md-6">
+          <div class="review-content">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
   <!-- bootstrap js -->
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
