--- a/index.html
+++ b/index.html
@@ -431,13 +431,24 @@
   <!--end pricing section-->
   <hr>
 
-  <!-- review section -->
-  <section class="review-section">
-    <div class="review-bg"></div>
+  <!-- testimonial section -->
+  <section class="testimonial-section">
+    <div class="testimonial-bg"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 offset-lg-6 offset-md-6">
-          <div class="review-content">
+          <div class="testimonial-content">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 text-center">
+                <!-- section title -->
+                <div class="section-title mb-5 text-center">
+                  <h2 class="pb-2">Meet Client Satisfaction
+                    by using product</h2>
+                  <p>The rise of mobile devices transforms the way we consume information entirely
+                    and the world's most elevant channels such as Facebook.</p>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
@@ -445,7 +456,118 @@
     </div>
   </section>
 
+  <!-- faq section -->
+  <section class="faq-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3">
+          <!-- section title -->
+          <div class="section-title mb-5 text-center">
+            <h2 class="pb-2">Get awesome features, without
+              extra charges</h2>
+            <p>The rise of mobile devices transforms the way we consume information entirely
+              and the world's most elevant channels such as Facebook.</p>
+          </div>
+        </div>
+      </div>
+      <!-- accordion -->
+      <div class="row">
+        <div class="col-lg-8 col-md-10 col-sm-10 col-12 offset-lg-2 offset-md-1 offset-sm-1">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  How to contact with riders emergency?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches
+                  to corporate strategy foster collaborative thinking to further the overall value proposition.
+                  Organically grow the holistic world view of disruptive innovation via workplace diversity and
+                  empowerment.
+                </div>
+              </div>
+            </div>
 
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  App installation failed, how to update system information?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches
+                  to corporate strategy foster collaborative thinking to further the overall value proposition.
+                  Organically grow the holistic world view of disruptive innovation via workplace diversity and
+                  empowerment.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Website reponse taking time, how to improve?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches
+                  to corporate strategy foster collaborative thinking to further the overall value proposition.
+                  Organically grow the holistic world view of disruptive innovation via workplace diversity and
+                  empowerment.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  New update fixed all bug and issues
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
+                  approaches to corporate strategy foster collaborative thinking to further the overall value
+                  proposition. Organically grow the holistic world view of disruptive innovation via workplace
+                  diversity and empowerment.
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  How to contact with riders emergency?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
+                  approaches to corporate strategy foster collaborative thinking to further the overall value
+                  proposition. Organically grow the holistic world view of disruptive innovation via workplace
+                  diversity and empowerment.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- bootstrap js -->
