--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
   </section>
 
   <!-- faq section -->
-  <section class="faq-section">
+  <section class="faq-section py-5 my-3">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3">
@@ -529,13 +529,13 @@
             </div>
 
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
+              <h2 class="accordion-header" id="headingFour">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                   New update fixed all bug and issues
                 </button>
               </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
@@ -547,13 +547,13 @@
             </div>
 
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
+              <h2 class="accordion-header" id="headingFive">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                   How to contact with riders emergency?
                 </button>
               </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+              <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
