--- a/index.html
+++ b/index.html
@@ -568,7 +568,58 @@
       </div>
     </div>
   </section>
+  <!--end faq section-->
+  <hr>
 
+  <!-- download section -->
+  <section class="download-section">
+    <div class="download-bg"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-8">
+          <div class="download-content">
+            <h2 class="d-title">Download our App now !</h2>
+            <p>The rise of mobile devices transforms the way we consume information entirely
+              and the world's most elevant channels such as Facebook.</p>
+            <div class="apps-store mt-3">
+              <a href="#"><img class="me-2" src="./img/logo/google-play.png" alt=""></a>
+              <a href="#"><img src="./img/logo/app-store.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <div class="footer-content text-center ">
+            <a class="navbar-brand mb-4" href="#"><span class="text-warning">App</span>Lab</a>
+            <ul class=" d-flex justify-content-center mt-4">
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">Key Features</a>
+              </li>
+              <li>
+                <a href="#">Pricing</a>
+              </li>
+              <li>
+                <a href="#">Testimonial</a>
+              </li>
+              <li>
+                <a href="#">FAQ</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!-- bootstrap js -->
   <script src="js/bootstrap.bundle.min.js"></script>
